# PhotoManagement

./: .gitignore  README.md  contributions.md  databaseExample.py  examples.ipynb  image_hash_test.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.md
ElasticSearchDatabase/: .env  Dockerfile  MAKE database.txt  README.md  ca.crt  docker-compose.yml  http_ca.crt
PhotoManagement/: databaseExample.py  databasetest.py  databasetests.py
UI/: edit_cv.py  gui_cv.py  gui_main.py  test.py
db/: chroma.sqlite3
docs/: index.html  photomanagement.html  search.js
docs/photomanagement/: chat.html  database.html  hash.html  speech.html  util.html
photoManagement/: db.py  image_hash.py  image_hash_test.py
photoManagement/photomanagement/: cmd.py
photoManagement/test-database/: chroma.sqlite3
photoManagement/test-textual-search/: chroma.sqlite3
photoManagement/tests/: dataMaker.py  image_hash_test.py
photomanagement/: README.md  pyproject.toml
photomanagement/UI/: edit_cv.py  edit_type.py  gui_cv.py  gui_main.py  main.py
photomanagement/photomanagement/: __init__.py  chat.py  database.py  edit.py  gui.py  hash.py  main.py  speech.py  test.py  util.py
photomanagement/testdata/: testhash.py
photomanagement/tests/: testchat.py  testdatabase.py  testhash.py  testspeech.py  testtextualsearch.py  testupdate.py  util.py
