[tool.poetry]
name = "photomanagement"
version = "0.1.0"
description = "A package providing functionality for managing your photos."
authors = [
    "Chaniel Abou-Ezzi",
    "Anh Le",
    "Anh Trinh",
    "Kailin Luo",
    "Joseph Schwab"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
chromadb = "^0.5.20"
dearpygui = "^2.0.0"
pillow = "^11.0.0"
ollama = "^0.3.3"
sentence-transformers = "^3.2.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
